    - Boingboing TV
    - GameTrailers
    - Tudou

- Revised 6 services:
    - YouTube (added support for embeded videos and added "need login" detection)
    - Tu.tv (added "need login" detection)
    - Metacafe
    - PornoTube
    - TuPorno
    - LiveLeak

- Changed licence to GNU GPL v3 (http://www.gnu.org/licenses/gpl.html)
- Changed main window size
- Changed Information window size

- Fixed bug (Error: Disabling the automatic updates, the downloads were not started) 
- Fixed bug (Error: On restore session, the missing videos where not deleted from list)

- Revised and sorted the "Tab orders" into the application for a better accessibility
- Revised all shortcuts and replaced for Standard and cross-platform shortcuts

- Improved error detection (the "Bug report" is only displayed if is a "Connection error" or "Invalid url")
- Improved the "ProgressBar class" (now is more configurable)
- Improved internal "HTTP implementation" (full class rewrited)

- Updated english (UK) language file
- Updated Spanish (ES) language file
- Updated Catalan (CAT) language file 

1.7.1a:
-------

- Fixed bug (Error: downloads were not finished!! ** IMPORTANT **)
- Fixed bug (Error: "Display popup" option was not saved)
- Fixed bug (Error: prevent access violation on invalid videos)

1.7a
----

- Added 10 new services:
    - XTube
    - Zuuble
    - ZippyVideos (FLV & WMV videos)
    - Zedge
    - Blip
    - Ceknito
    - ZanyVideos
    - Zaable
    - YouTubeIslam
    - YourFileHost

- Revised 2 services:
    - Tu.tv (yes, again... :P)
    - MySpaceTv

- Fixed bug (Error: external links were not opened... such as "sf.net tracker", "homepage in information form", etc...)
- Fixed bug (Error: "Content-Length" was now correctly parsed in http class when a ";" was found)
- Fixed bug (Error: multiple "Bug Reports" were displayed at same time and always the same video)

- Improved download speed average 
- Improved time remaining calculation