@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>350</width>
-    <height>307</height>
+    <width>352</width>
+    <height>315</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -16,7 +16,7 @@
    <bool>true</bool>
   </property>
   <layout class="QGridLayout" >
-   <item rowspan="2" row="0" column="0" >
+   <item row="0" column="0" >
     <widget class="QLabel" name="label" >
      <property name="maximumSize" >
       <size>
@@ -33,40 +33,70 @@
     </widget>
    </item>
    <item row="0" column="1" colspan="2" >
-    <widget class="QLabel" name="label_2" >
-     <property name="text" >
-      <string>Powered by &lt;b>Xesc &amp;amp; Technology &amp;reg; 2008&lt;/b>&lt;br>Contact: &lt;a href="mailto:xeskuu.xvst@gmail.com">xeskuu.xvst@gmail.com&lt;/a></string>
-     </property>
-     <property name="alignment" >
-      <set>Qt::AlignCenter</set>
-     </property>
-     <property name="openExternalLinks" >
-      <bool>true</bool>
-     </property>
-    </widget>
+    <layout class="QVBoxLayout" >
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>20</width>
+         <height>16</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2" >
+       <property name="text" >
+        <string>Powered by &lt;b>Xesc &amp;amp; Technology &amp;reg; 2008&lt;/b>&lt;br>Contact: &lt;a href="mailto:xeskuu.xvst@gmail.com">xeskuu.xvst@gmail.com&lt;/a></string>
+       </property>
+       <property name="alignment" >
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="openExternalLinks" >
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>20</width>
+         <height>16</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_4" >
+       <property name="text" >
+        <string>This software is OpenSource and is licenced under &lt;a href="http://www.gnu.org/licenses/gpl.html">&lt;b>GNU GPL&lt;/b>&lt;/a> licence (General Public Licence)</string>
+       </property>
+       <property name="alignment" >
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="wordWrap" >
+        <bool>true</bool>
+       </property>
+       <property name="openExternalLinks" >
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="1" column="1" colspan="2" >
-    <widget class="QLabel" name="label_4" >
-     <property name="text" >
-      <string>This software is OpenSource and is licenced under &lt;a href="http://www.gnu.org/licenses/gpl.html">&lt;b>GNU GPL&lt;/b>&lt;/a> licence (General Public Licence)</string>
-     </property>
-     <property name="alignment" >
-      <set>Qt::AlignCenter</set>
-     </property>
-     <property name="wordWrap" >
-      <bool>true</bool>
-     </property>
-     <property name="openExternalLinks" >
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="3" >
+   <item row="1" column="0" colspan="3" >
     <widget class="Line" name="bvlSeparator_2" >
      <property name="minimumSize" >
       <size>
        <width>0</width>
-       <height>6</height>
+       <height>10</height>
       </size>
      </property>
      <property name="orientation" >
@@ -74,7 +104,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="3" >
+   <item row="2" column="0" colspan="3" >
     <widget class="QLabel" name="label_5" >
      <property name="text" >
       <string>&lt;b>Special thanks to:&lt;/b>&lt;br>&lt;br>&lt;b>Xavi&lt;/b>: Mac OS X responsable&lt;br>&lt;b>Grzegorz Gibas (Amigib)&lt;/b>: Polish language author&lt;br>&lt;b>Daisuke (barlog)&lt;/b>: Japanese language author&lt;br>&lt;b>Johan Hornof&lt;/b> &amp; &lt;b>Lukas Vana (fabian)&lt;/b>: Czech language authors&lt;br>&lt;b>Mark James&lt;/b>: Silk icon set 1.3 author&lt;br>&lt;b>Mayosoft®&lt;/b>: "I'm not a Patriot" icons author</string>
@@ -84,12 +114,12 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="3" >
+   <item row="3" column="0" colspan="3" >
     <widget class="Line" name="bvlSeparator" >
      <property name="minimumSize" >
       <size>
        <width>0</width>
-       <height>6</height>
+       <height>10</height>
       </size>
      </property>
      <property name="orientation" >
@@ -97,7 +127,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" >
+   <item row="4" column="0" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
@@ -110,7 +140,7 @@
      </property>
     </spacer>
    </item>
-   <item row="5" column="1" >
+   <item row="4" column="1" >
     <widget class="QPushButton" name="btnOk" >
      <property name="minimumSize" >
       <size>
@@ -147,7 +177,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="2" >
+   <item row="4" column="2" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
